@@ -1,2 +1,2 @@
-#define VERSION      "4.2.0.3483"
+#define VERSION      "4.2.0.3484"
 #define GENERATION   "4.2"
